# anyshell

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
src/claude_bash/: __init__.py  _shellquote.py
src/claude_bash/engine/: command.py  shell.py
src/claude_bash/output/: circular_buffer.py  disk_output.py  task_output.py
src/claude_bash/providers/: base.py  bash_provider.py  powershell_detection.py  powershell_provider.py  snapshot.py
src/claude_bash/quoting/: pipe_command.py  shell_quoting.py
src/claude_bash/state/: cwd_state.py  paths.py  subprocess_env.py
src/claude_bash/tool/: bash_tool.py  command_semantics.py  output_limits.py  tool_result.py
src/claude_bash/util/: format.py  fs.py  platform.py  stringutils.py
tests/: conftest.py  test_background.py  test_bash_provider.py  test_bash_tool.py  test_command_semantics.py  test_disk_output.py  test_pipe_command.py  test_powershell.py  test_shell_exec.py  test_shell_quoting.py  test_shellquote.py  test_snapshot.py  test_task_output.py  test_tool_result.py
tests/fixtures/: shellquote_ground_truth.json
tests/helpers/: fake_process.py
