[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-bash"
version = "0.1.0"
description = "Python (asyncio) 1:1 port of Claude Code's bash/powershell execution engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "psutil>=5.9",          # Windows tree-kill + POSIX killpg fallback
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_bash"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
